public/stylesheets/screen.css
/*
 * This file is part of meego-test-reports
 *
 * Copyright (C) 2010 Nokia Corporation and/or its subsidiary(-ies).
 *
 * Authors: Jussi Jokinen <jussijokinen@iki.fi>
 *
 * This program is free software; you can redistribute it and/or
 * modify it under the terms of the GNU Lesser General Public License
 * version 2.1 as published by the Free Software Foundation.
 *
 * This program is distributed in the hope that it will be useful, but
 * WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
 * Lesser General Public License for more details.
 *
 * You should have received a copy of the GNU Lesser General Public
 * License along with this program; if not, write to the Free Software
 * Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA
 * 02110-1301 USA
 *
 */

@charset "UTF-8";
/* CSS Document */

/* @group General styles */

/* @group reset */

html, body, div, span, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, code, del, dfn, em, img, q, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, input {
    margin:0;
    padding:0;
    border:0;
    font-weight:inherit;
    font-style:inherit;
    font-size:100%;
    font-family:inherit;
    vertical-align:baseline; }

table {
    border-collapse:separate;
    border-spacing:0; }

caption,
th,
td {
    text-align:left;
    font-weight:normal; }

table,
td,
th {
    vertical-align:middle; }

blockquote:before,
blockquote:after,
q:before,
q:after {
    content:""; }
blockquote,
q {
    quotes:"" "";}
a img {
    border:none; }

/* @end */


.htmlgraph {
  width: 100%;
  height: 12px;
  overflow: hidden;
}

.htmlgraph .passed {
  background-color: #73a20c;
  float: left;
}

.htmlgraph .failed {
  background-color: #ec4343;
  float: left;
}

.htmlgraph .na {
  background-color: #cacaca;
  float: left;
}

div.summary_graph_wrapper {
  width: 405px;
  height: 220px;
}

/* @group body styles */
/* font/leading: 12/18px */
body {
    font: 75%/1.5 Verdana, sans-serif;
    color: #515151; }

/* @end */


/* @group links */

a {color: #515151;text-decoration:underline; outline: none;}
a:focus, a:hover, a:active {color: #ed0089;}
a.external,
a.mailto {
	background-color: transparent;
	background-repeat: no-repeat;
	background-position: right 1px;}

a.external {
	background-image: url('../images/external_icon.png');
	padding-right:15px;}
	
a.mailto {
	background-image: url('../images/mailto_icon.png');
	padding-right:20px;}

a.mailto:hover {
	background-image: url('../images/mailto_icon_hover.png');}

a.external:hover {
	background-image: url('../images/external_icon_hover.png');}

/* @end */


/* @group basic typography */

h1,h2,h3 {
    font-family: Arial, sans-serif;
    font-weight: bold;}

h1 {
    font-size: 2em;
    line-height:1;
    color: #000;
    margin-bottom:0.75em;
    padding-top:0.25em;}

h1 em {
    font-style: normal;
    color: #909090;
}

h2 {
    font-size: 1.6666em;
    line-height:1;
    color: #000;
    margin:1.5em 0 0.75em 0;
    border-top: 1px solid #ccc;
    padding-top: 10px;}

h3 {
    font-size: 1.3333em;
    line-height: 1.125;
    color: #000;
    margin-bottom:1em;}

h4 {
    font-size:1.2em;
    line-height:1.25;
    margin-bottom:1.25em;}

h5 {
    font-size:1em;
    font-weight:bold;
    margin-bottom:1.5em;}

h6 {
    font-size:1em;
    font-weight:bold;}

h1 img, h2 img, h3 img, h4 img, h5 img, h6 img {
    margin:0;}

p {
    margin:0 0 1.5em;
    color:#625858;}

img.bhs {
    position: relative;
    top: 1px;
    height: 14px;
/*width: 386px;*/
    width: 100%;
}

.bhs_wrap {
    overflow:hidden;
    height: 14px;}

.bvs_wrap {
    float: left;
    margin-left: 30px;
    margin-bottom: -25px;}

div.wrap {
    overflow: hidden; }

#contents_title {
    clear: both;
}

/* @end */

/* @group lists */

ul,
ol{
    margin:0 1.5em 1.5em 1.5em; }

li ul,
ol.toc ol {
    margin:0 1.5em 0 1.5em; }

ul {
    list-style-type: square; }

ol {
    list-style-type:decimal; }

dl {
    margin:0 1.5em 1.5em 0; }

dl dt {
    font-weight:normal; }

dd {
    margin-left:1.5em;
    font-weight: bold; }

/* @end */


/* @group tables */

table {
    margin-bottom:1.4em;
    width:100%; }

th {
    font-size: 10px;
    border-bottom: 1px solid #eee;}

th a,
th {
	color: #aaa;}

thead th {
    font-weight: bold;
    vertical-align: bottom; }

th,
td,
caption {
    padding:4px 10px 4px 5px; }

td {
    border-left: 1px solid #ccc; }

tr td:first-child {
    border-left: none; }

tr.even td {
    background-color: #f4f4f4;}

tfoot {
    font-style:italic; }

.column_head_1,
.column_head_2 {
    font-family: Arial, sans-serif;
    padding-left: 1em;
    text-align: center;}

.column_head_1,
.column_head_separate {
    border-bottom: none;
    background: url("../images/bt_shade.png") repeat-x left bottom transparent;}

.column_head_1 {
    border-left: 1px solid #cacaca;
    text-shadow: #fff 1px 1px 1px;
    font-size: 1.666667em;
    behavior: url(javascripts/pie.htc);
    padding-bottom:0.5em;
    width:28%;}

.column_head_2,
.column_head_separate_2 {
    background-color: #e0dfdf;}

.column_head_2{
    background-color: #e0dfdf;
    font-size: 1em;
    border-left: 1px solid #cacaca;}




/* @end */


/* @group other tags */

caption {
    background:#eee; }

blockquote {
    margin:1.5em;
    color:#666;
    font-style:italic; }

strong {
    font-weight:bold; }

dfn {
    font-style:italic; }

em {
    font-style: italic}

/* 'undermine' style for meta info*/
.un {font-weight: normal;
    font-size: smaller;}

dfn {
    font-weight:bold; }

sup,
sub {
    line-height:0; }

abbr,
acronym {
    border-bottom:1px dotted #666; }

address {
    margin:0 0 1.5em;
    font-style:italic;}

del {
    color:#666;}

pre {
    margin:1.5em 0;
    white-space:pre;}

pre,
code,
tt {
    font:1em 'andale mono', 'lucida console', monospace;
    line-height:1.5;}
/* ... */

